--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 *{
     list-style: none;
 }
-
+html{
+background-color: #f1a689;
+}
 .header{
     display: flex;
     width: 100%;
@@ -13,21 +15,24 @@
     border-bottom: 1px solid black;
     justify-content: center;
     align-items: center;
-    width: 60%;
+    width: 59.6%;
     padding-bottom: 20px;
 
 }
+
 .header-main{
 font-family: Silkscreen;
 font-size: 50px;
 padding-top: 40px;
 margin: 2px;
+
 }
+
 
 .header-list{
     display: flex;
     gap: 20px;
-    margin-right: 200px;
+    margin-right: 370px;
 }
 
 .header-list-item{
@@ -41,4 +46,10 @@ margin: 2px;
     padding-top: 67px;
     font-size: 12px;
 
+}
+
+.header-img{
+    width: 10px;
+    margin-top: 66px;
+    margin-left: 7px;
 }
