--- a/styles.css
+++ b/styles.css
@@ -96,8 +96,25 @@ a{
     display: flex;
 }
 
-.btn-1{
-    background-color: #ffffff00;
-    border-left: 2px solid rgb(0, 0, 0);
-    border-bottom: 2px solid rgb(0, 0, 0);
+.button-wrapper{
+    margin-left: 280px;
+    margin-top: 84px;
+    display: flex;
+    gap: 30px;
 }
+
+.btn-1{
+        background-color: #FFEB1C;
+        color: black;
+        font-family: Arvo;
+        font-size: 13px;
+        font-weight: bold;
+        border: 3px solid black;
+        padding: 10px 20px;
+        text-decoration: none;
+        display: inline-block;
+        position: relative;
+    background-color: #ffffff00;
+}
+
+    
