--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ margin-top: 70px;
 }
 
 .mark1{
-    background-color:  rgb(119, 243, 224);
+    background-color:  #77f3e0;
     padding: 2px;
 }
 
@@ -115,6 +115,9 @@ a{
         display: inline-block;
         position: relative;
     background-color: #ffffff00;
+}
+
+.btn-1:hover{
 }
 
     
