--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ a{
 
 .button-wrapper{
     margin-left: 280px;
-    margin-top: /* 84px */;
+    margin-top: 113px /* 84px */;
     display: flex;
     gap: 30px;
 }
@@ -126,9 +126,9 @@ a{
 }
 
 .cup{
-    width: 150px;
-    margin-left: 280px;
-    margin-top: 70px;
+    width: 180px;
+    margin-left: 240px;
+    margin-top: 40px;
 }
 
     
