--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ margin-top: 70px;
     font-family: Arvo;
     font-weight: 200;
     margin-left: 280px;
-    width: 800px;
+    width: 600px;
 }
 
 .mark1{
@@ -127,8 +127,8 @@ a{
 
 .cup{
     width: 180px;
-    margin-left: 240px;
-    margin-top: 40px;
+    margin-left: 230px;
+    margin-top: px;
 }
 
     
