--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ margin: 2px;
     font-size: 30px;
 margin-left: 280px;
 margin-top: 70px;
+line-height: 140%;
 }
 
 .landing-para{
@@ -69,6 +70,7 @@ margin-top: 70px;
     font-weight: 200;
     margin-left: 280px;
     width: 600px;
+    line-height: 150%;
 }
 
 .mark1{
@@ -108,7 +110,7 @@ a{
         background-color: #FFEB1C;
         color: black;
         font-family: Arvo;
-        font-size: 13px;
+        font-size: 12px;
         font-weight: bold;
         border: 3px solid black;
         padding: 10px 20px;
@@ -127,7 +129,7 @@ a{
 
 .cup{
     width: 180px;
-    margin-left: 230px;
+    margin-left: 260px;
     margin-top: px;
 }
 
