--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,15 @@ margin: 2px;
     margin-left: 7px;
 }
 
+.landing{
+    @media screen and (max-width: 768px){
+max-width: 100%;
+display: flex;
+justify-content: center;
+flex-direction: column;
+    }
+}
+
 .landing-main{
     font-family: Arvo;
     font-size: 30px;
@@ -162,7 +171,4 @@ justify-content: center;
 }
 
 
-@media screen and (min-width: 768px){
-    
-}
     
