--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ margin-top: 70px;
 line-height: 140%;
 @media screen and (max-width: 768px){
     margin-left: 50px;
+    max-width: 600px;
         }
 }
 
@@ -90,6 +91,7 @@ line-height: 140%;
     line-height: 150%;
     @media screen and (max-width: 768px){
         margin-left: 50px;
+        max-width: 500px;
     }
 }
 
@@ -139,6 +141,10 @@ justify-content: center;
     margin-top: 113px /* 84px */;
     display: flex;
     gap: 30px;
+    @media screen and (max-width: 768px){
+        margin-left: 50px;
+        max-width: 300px;
+            }
 }
 
 .btn-1{
