--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,9 @@ background-color: #FFEB1C /* #f1a689 */;
     align-items: center;
     width: 59.6%;
     padding-bottom: 20px;
-
+    @media screen and (max-width: 768px){
+      width: 80%;
+            }
 }
 
 .header-main{
@@ -39,6 +41,9 @@ margin: 2px;
     display: flex;
     gap: 20px;
     margin-right: 370px;
+    @media screen and (max-width: 768px){
+        gap: 13px;
+    }
 }
 
 .header-list-item{
