--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ background-color: #FFEB1C /* #f1a689 */;
     padding-bottom: 20px;
     @media screen and (max-width: 768px){
       width: 80%;
-            }
+    }
 }
 
 .header-main{
@@ -43,6 +43,7 @@ margin: 2px;
     margin-right: 370px;
     @media screen and (max-width: 768px){
         gap: 13px;
+        margin-right: 130px;
     }
 }
 
