--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,9 @@ font-family: Silkscreen;
 font-size: 57.5px;
 padding-top: 40px;
 margin: 2px;
+@media screen and (max-width: 768px){
+    font-size: 60px;
+}
 
 }
 
@@ -43,7 +46,7 @@ margin: 2px;
     margin-right: 370px;
     @media screen and (max-width: 768px){
         gap: 13px;
-        margin-right: 130px;
+        margin-right: 20px;
     }
 }
 
@@ -52,6 +55,9 @@ margin: 2px;
     font-family: Arvo;
     font-weight: 600;
     font-size: 12px;
+    @media screen and (max-width: 768px){
+        font-size: 17px;
+    }
 }
 
 .header-para{
@@ -59,7 +65,9 @@ margin: 2px;
     font-weight: 600;
     padding-top: 67px;
     font-size: 12px;
-
+    @media screen and (max-width: 768px){
+        font-size: 17px;
+    }
 }
 
 .header-img{
