--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ margin-left: 280px;
 margin-top: 70px;
 line-height: 140%;
 @media screen and (max-width: 768px){
-    margin-left: 50px;
+    margin-left: 76px;
     max-width: 600px;
         }
 }
@@ -104,7 +104,7 @@ line-height: 140%;
     width: 600px;
     line-height: 150%;
     @media screen and (max-width: 768px){
-        margin-left: 50px;
+        margin-left: 76px;
         max-width: 500px;
     }
 }
@@ -156,7 +156,7 @@ justify-content: center;
     display: flex;
     gap: 30px;
     @media screen and (max-width: 768px){
-        margin-left: 50px;
+        margin-left: 76px;
         max-width: 300px;
             }
 }
@@ -176,6 +176,10 @@ justify-content: center;
     background-color: #ffffff00;
     display: flex;
     align-items: center;
+    @media screen and (max-width: 768px){
+        font-size: 17px;
+        padding: 20px 30px;
+    }
 }
 
 /* .btn-1:hover{
