--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,11 @@ justify-content: center;
     align-items: center;
     @media screen and (max-width: 768px){
         font-size: 17px;
-        padding: 20px 30px;
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+
     }
 }
 
