--- a/styles.css
+++ b/styles.css
@@ -197,6 +197,9 @@ justify-content: center;
     width: 180px;
     margin-left: 260px;
     margin-top: px;
+    @media screen and (max-width: 768px){
+    display: none;
+    }
 }
 
 .group2{
