--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@ line-height: 140%;
 @media screen and (max-width: 768px){
     margin-left: 76px;
     max-width: 600px;
+    font-size: 34px;
         }
 }
 
@@ -106,6 +107,7 @@ line-height: 140%;
     @media screen and (max-width: 768px){
         margin-left: 76px;
         max-width: 500px;
+        font-size: 26px;
     }
 }
 
