--- a/styles.css
+++ b/styles.css
@@ -182,9 +182,7 @@ justify-content: center;
         font-size: 20px;
         padding-left: 30px;
         padding-right: 30px;
-        padding-top: 20px;
-        padding-bottom: 20px;
-
+        height: 80px;
     }
 }
 
@@ -207,6 +205,9 @@ justify-content: center;
 .group2{
     margin-left: 10px;
     width: 15px;
+    @media screen and (max-width: 768px){
+        width: 40px;
+    }
 }
 
 
