--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,9 @@
 
 html{
 background-color: #FFEB1C /* #f1a689 */;
+@media screen and (max-width: 768px){
+    background-color: #faef76 /* #f1a689 */;
+}
 }
 .header{
     display: flex;
@@ -112,7 +115,7 @@ line-height: 140%;
 }
 
 .mark1{
-    background-color:  #89f0e1;
+    background-color:  #77f3e0;
     padding: 2px;
 }
 
