--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ background-color: #FFEB1C /* #f1a689 */;
     width: 59.6%;
     padding-bottom: 20px;
     @media screen and (max-width: 768px){
-      width: 80%;
+      width: 80vw;
     }
 }
 
