--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,8 @@ margin: 2px;
     gap: 20px;
     margin-right: 370px;
     @media screen and (max-width: 768px){
-        gap: 13px;
-        margin-right: 20px;
+    /*     gap: 2vw;
+        margin-right: 15vw; */
     }
 }
 
