--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,8 @@ margin: 2px;
     gap: 20px;
     margin-right: 370px;
     @media screen and (max-width: 768px){
-    /*     gap: 2vw;
-        margin-right: 15vw; */
+     gap: 2vw;
+     margin-right: 15vw; 
     }
 }
 
@@ -108,7 +108,7 @@ line-height: 140%;
     width: 600px;
     line-height: 150%;
     @media screen and (max-width: 768px){
-        margin-left: 76px;
+        margin-left:20vw;
         max-width: 500px;
         font-size: 26px;
     }
