--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 html{
 background-color:  #FFEB1C /* #f1a689 */;
 @media screen and (max-width: 768px){
-    background-color: #faef76 /* #f1a689 */;
+    background-color: #fdf058 /* #f1a689 */;
 }
 }
 .header{
