--- a/styles.css
+++ b/styles.css
@@ -233,4 +233,12 @@ justify-content: center;
     font-size: 15px;
 }
 
+.cursor{
+    position:fixed;
+    left: 0;
+    pointer-events: none;
+    transition: transform .1s;
+    background-color: ;
+}
+
     
