--- a/styles.css
+++ b/styles.css
@@ -238,7 +238,7 @@ justify-content: center;
     left: 0;
     pointer-events: none;
     transition: transform .1s;
-    background-color: ;
+    background-color: #77f3e0;
 }
 
     
