--- a/styles.css
+++ b/styles.css
@@ -239,6 +239,10 @@ justify-content: center;
     pointer-events: none;
     transition: transform .1s;
     background-color: #77f3e0;
+    width: 20px;
+    height: 20px;
+    z-index: 999;
 }
+
 
     
