--- a/styles.css
+++ b/styles.css
@@ -169,12 +169,22 @@ justify-content: center;
     font-family: Arvo;
     font-weight: 200;
     margin-left: 10px;
-    width: 600px;
+
     line-height: 150%;
 }
 
 .wrapper4-main{
-    
+    font-family: Arvo;
+    font-weight: 200;
+    margin-left: 10px;
+    line-height: 150%;
+}
+
+.wrapper5-main{
+    font-family: Arvo;
+    font-weight: 200;
+    margin-left: 10px;
+    line-height: 150%;
 }
 
 .png1{
