--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,20 @@ justify-content: center;
     line-height: 150%;
 }
 
+.wrapper5-para{
+    font-family: Arvo;
+    font-weight: 200;
+    margin-left: 10px;
+    line-height: 150%;
+}
+
+.wrapper5-link{
+    font-family: Arvo;
+    font-weight: 200;
+    margin-left: 10px;
+    line-height: 150%;
+}
+
 .wrapper5-main{
     font-family: Arvo;
     font-weight: 200;
