--- a/styles.css
+++ b/styles.css
@@ -182,7 +182,12 @@ justify-content: center;
     font-family: Arvo;
     font-weight: 200;
     margin-left: 10px;
+}
 
+.wrapper5-link{
+    font-family: Arvo;
+    font-weight: 200;
+    margin-left: 10px;
 }
 
 .wrapper5-link{
