--- a/styles.css
+++ b/styles.css
@@ -194,7 +194,13 @@ justify-content: center;
     font-family: Arvo;
     font-weight: 200;
     margin-left: 10px;
+}
 
+.wrapper5-link{
+    font-family: Arvo;
+    font-weight: 200;
+    margin-left: 10px;
+    font-size: ;
 }
 
 .wrapper5-main{
