--- a/styles.css
+++ b/styles.css
@@ -182,25 +182,15 @@ justify-content: center;
     font-family: Arvo;
     font-weight: 200;
     margin-left: 10px;
+    font-size: 15px;
 }
+
 
 .wrapper5-link{
     font-family: Arvo;
     font-weight: 200;
     margin-left: 10px;
-}
-
-.wrapper5-link{
-    font-family: Arvo;
-    font-weight: 200;
-    margin-left: 10px;
-}
-
-.wrapper5-link{
-    font-family: Arvo;
-    font-weight: 200;
-    margin-left: 10px;
-    font-size: ;
+    font-size: 15px;
 }
 
 .wrapper5-main{
