--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,22 @@ a{
 .about-wrapper2{
     display: flex;
     gap: 20px;
-/*     border: ; */
+    .pixel-corners {
+        clip-path: polygon(
+          0px calc(100% - 7px),
+          7px calc(100% - 7px),
+          7px 100%,
+          calc(100% - 7px) 100%,
+          calc(100% - 7px) calc(100% - 7px),
+          100% calc(100% - 7px),
+          100% 7px,
+          calc(100% - 7px) 7px,
+          calc(100% - 7px) 0px,
+          7px 0px,
+          7px 7px,
+          0px 7px
+        );
+      }
 }
 
 .about-wrapper3{
