--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ a{
     margin-top: 20px;
     display: flex;
     justify-content: center;
-    margin-left: ;
+    margin-left: 280px;
     gap: 20px;
     border: 20px solid rgb(0, 0, 0);
   
