--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,7 @@ a{
     display: flex;
     justify-content: center;
     margin-left: 280px;
+    margin-right: 280px;
     gap: 20px;
     border: 20px solid rgb(0, 0, 0);
   
