--- a/styles.css
+++ b/styles.css
@@ -145,8 +145,8 @@ a{
     margin-top: 20px;
     display: flex;
     justify-content: center;
-    margin-left: 280px;
-    margin-right: 280px;
+    margin-left: 288px;
+    margin-right: 288px;
     gap: 20px;
     border: 20px solid rgb(0, 0, 0);
   
@@ -156,6 +156,7 @@ a{
 display: flex;
 justify-content: center;
     align-items: center;
+    padding-top: 100px;
 }
 
 .about-wrapper4{
