--- a/styles.css
+++ b/styles.css
@@ -163,11 +163,13 @@ justify-content: center;
     display: flex;
     justify-content: center;
         align-items: center;
+        padding-bottom: 100px;
 }
 
 .about-wrapper5{
     display: flex;
 justify-content: center;
+padding-bottom: 100px;
     align-items: center;
     gap: 10px;
 }
