--- a/styles.css
+++ b/styles.css
@@ -145,9 +145,9 @@ a{
     margin-top: 20px;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     margin-left: 288px;
     margin-right: 288px;
-    gap: 20px;
     border: 20px solid rgb(0, 0, 0);
   
 }
