--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ background-color:  #FFEB1C /* #f1a689 */;
 }
 
 .body{
-    
+    margin: 0;
 }
 
 
@@ -24,7 +24,18 @@ background-color:  #FFEB1C /* #f1a689 */;
  display: flex;
  gap: 2rem;
  background: #FFEB1C;
+ width: fit-content;
+ padding: 1rem 3rem;
+ border-radius: 0 0 1rem 1rem;
 }
+
+.color-picker input[type="radio"]{
+    appearance: none;
+    width: 1rem;
+    height: 1rem;
+    border: 3px solid;
+}
+
 .header{
    /*  margin-top: 0px; */
     display: flex;
