--- a/styles.css
+++ b/styles.css
@@ -31,9 +31,10 @@ background-color:  #FFEB1C /* #f1a689 */;
 
 .color-picker input[type="radio"]{
     appearance: none;
-    width: 1rem;
-    height: 1rem;
-    border: 3px solid;
+    width: 1.5rem;
+    height: 1.5rem;
+    border: 3px solid var(--radio-color, currentColor);
+    border-radius: 50%;
 }
 
 .header{
