--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 html{
-background-color:  #FFEB1C /* #f1a689 */;
+background-color:  var(--clr-bg) /* #f1a689 */;
 @media screen and (max-width: 768px){
     background-color: #fdf058 /* #f1a689 */;
 }
@@ -23,12 +23,15 @@ background-color:  #FFEB1C /* #f1a689 */;
     --clr-bg:yellow;
 }
 
+p,h1{
+    color: var(--clr-text);
+}
 
 .color-picker > fieldset{
  border: 0;
  display: flex;
  gap: 2rem;
- background: #FFEB1C;
+ background: var(--clr-bg);
  width: fit-content;
  padding: 1rem 3rem;
  border-radius: 0 0 1rem 1rem;
@@ -83,7 +86,7 @@ background-color:  #FFEB1C /* #f1a689 */;
 
 .header-wrapper{
     display: flex;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid var(--clr-text);
     justify-content: center;
     align-items: center;
     width: 59.6%;
@@ -190,7 +193,7 @@ a{
 }
 
 .dev{
-    background-color: #FFEB1C;
+    background-color: var(--clr-bg);
 }
 
 .about-wrapper1{
