--- a/styles.css
+++ b/styles.css
@@ -28,32 +28,31 @@ p,h1{
     color: var(--clr-text);
 }
 
-.visually-hidden{
-    font-family: Arvo;
-}
 
 .theme-clr-light{
     color: var(--clr-text);
+    font-family: Arvo;
 }
 
 
 .theme-clr-pink{
     color: var(--clr-text);
+    font-family: Arvo;
 }
 
 
 .theme-clr-black{
     color: var(--clr-text);
+    font-family: Arvo;
 }
 
 .color-picker > fieldset{
  border: 0;
  display: flex;
- gap: 2rem;
+ gap: 20px;
  background: var(--clr-bg);
  width: fit-content;
- padding: 1rem 3rem;
- border-radius: 0 0 1rem 1rem;
+
 }
 
 .color-picker input[type="radio"]{
@@ -91,7 +90,9 @@ p,h1{
 :root:has(#black:checked) {
     --clr-text: yellow;
     --clr-bg: black;
-
+    .header-img{
+        display: none;
+    }
 }
 
 
@@ -136,7 +137,7 @@ color: var(--clr-text);
 .header-list{
     display: flex;
     gap: 20px;
-    margin-right: 370px;
+    margin-right: 20px;
     @media screen and (max-width: 768px){
      gap: 2vw;
      margin-right: 15vw; 
