--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,8 @@ p,h1{
 .theme-clr-light{
     color: var(--clr-text);
     font-family: Arvo;
+    font-weight: 600;
+    font-size: 12px;
 }
 
 
@@ -87,12 +89,18 @@ p,h1{
     .header-img{
         display: none;
     }
+    .group2{
+        display: none;
+    }
 }
 
 :root:has(#black:checked) {
     --clr-text: yellow;
     --clr-bg: black;
     .header-img{
+        display: none;
+    }
+    .group2{
         display: none;
     }
 }
@@ -392,6 +400,7 @@ padding-bottom: 100px;
     width: 180px;
     margin-left: 260px;
     margin-top: px;
+    filter: brightness(0) saturate(100%) invert(86%) sepia(20%) saturate(3168%) hue-rotate(235deg) brightness(108%) contrast(98%);
     @media screen and (max-width: 768px){
     display: none;
     }
