--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ label{
     font-weight: 600;
     font-size: 12px;
 }
-
+/* warum in aller welt wechseln die Teile nicht die Farbe?  */
 /* .theme-clr-pink{
     color: var(--clr-text);
     font-family: Arvo;
