--- a/styles.css
+++ b/styles.css
@@ -50,20 +50,62 @@ label{
     font-size: 12px;
 }
 /* warum in aller welt wechseln die Teile nicht die Farbe?  */
-/* .theme-clr-pink{
+.theme-clr-pink{
     color: var(--clr-text);
     font-family: Arvo;
+    display: flex;
+}
+/* 
+label input{
+    visibility: hidden;
+    display: block;
+    height: 0;
+    width: 0;
+    position: absolute;
+    overflow: hidden;
 }
 
+.checkbox-span {
+    height: 10px;
+    width: 10px;
+    border: 1px solid grey;
+    display: inline-block;
+    position: relative;
+  }
+
+  [type=radio]:checked + span:before {
+
+    position: absolute;
+    top: -5px;
+    left: 0;
+  } */
+
+ /* .checkbox-span input {
+    position: relative;
+    z-index: -9999;
+  }
+  
+  .checkbox-span {
+    width: 20px;
+    height: 20px;
+    display: block;
+    background: url("./igm/Check.svg");
+  }
+  
+  .theme-clr-pink input:checked + span {
+    background: url("./igm/Content\ Files\ Pencil\ Ruler.png");
+  } */
+ 
 .theme-clr-black{
     color: var(--clr-text);
     font-family: Arvo;
-} */
+    display: flex;
+}
 
 .color-picker > fieldset{
  border: 0;
  display: flex;
- gap: 20px;
+ gap: 5px;
  background: var(--clr-bg);
  width: 200px;
  margin-top: 70px;
@@ -141,6 +183,7 @@ input{
 :root:has(#black:checked) {
     --clr-text: yellow;
     --clr-bg: black;
+ /*    --radio-color:#FC9DF7; */
     .header-img{
         display: none;
     }
