--- a/styles.css
+++ b/styles.css
@@ -553,16 +553,14 @@ padding-bottom: 100px;
  }
 
  .quote-left{
-    /* padding-right: 40px; */
-    padding-top: 54px;
-    margin-right: 480px;
-/*     position: fixed; */
+
  }
 
  .quote-text{
 font-family: Arvo;
 font-size: 30px;
 line-height: 180%;
+max-width: 500px;
 /* position: fixed; */
  }
  
