--- a/styles.css
+++ b/styles.css
@@ -565,8 +565,15 @@ max-width: 500px;
  }
  
 .quote-right{
-padding-top: 120px;
-padding-left: 700px;
+
  }
+
+.quote-author{
+    font-family: Arvo;
+    font-weight: 200;
+    margin-left: 280px;
+    width: 600px;
+    line-height: 150%;
+}
 
     
