--- a/styles.css
+++ b/styles.css
@@ -552,9 +552,9 @@ padding-bottom: 100px;
     text-align: center;
  }
 
- /* .quote-left{
-
- } */
+.quote-left{
+padding-bottom: 100px;
+}
 
  .quote-text{
 font-family: Arvo;
@@ -564,9 +564,9 @@ max-width: 500px;
 
  }
  
-/* .quote-right{
-
- } */
+.quote-right{
+padding-top: 100px;
+ } 
 
 .quote-author{
     font-family: Arvo;
