--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@ input{
 }
 
 .color-picker input[type="radio"]#pink {
- --radio-color: #fc9de3; 
+ --radio-color: #b78ee2; 
 }
 
 .color-picker input[type="radio"]#light {
