--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@ input{
 }
 
 .color-picker input[type="radio"]#pink {
- --radio-color: #b78ee2; 
+ --radio-color: #fc9de3; 
 }
 
 .color-picker input[type="radio"]#light {
@@ -241,8 +241,7 @@ color: var(--clr-text);
     gap: 20px;
     margin-right: 20px;
     @media screen and (max-width: 768px){
-     gap: 2vw;
-     margin-right: 15vw; 
+    width: 100vw;
     }
 }
 
