--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,8 @@ background-color:  var(--clr-bg) /* #f1a689 */;
     --clr-text-spe: rgb(0, 0, 0);
     --clr-bg:yellow;
     --clr-mark:  #77f3e0;
-    --radio-outline: 1px solid black;
+    --radio-color: red;
+
 }
 
 p,h1{
@@ -167,6 +168,7 @@ input{
     --clr-bg: #F3F9FC;
     --clr-mark: #FC9DF7;
     --clr-text-spe: #F3F9FC;
+    --radio-color: rgb(119, 70, 70); 
     .header-img{
         display: none;
     }
