--- a/styles.css
+++ b/styles.css
@@ -577,6 +577,9 @@ padding-right: 100px;
     line-height: 150%;
 }
 
-.quote-author-wrapper
+.quote-author-wrapper{
+    display: flex;
+    justify-content: center;
+}
 
     
