--- a/styles.css
+++ b/styles.css
@@ -553,6 +553,7 @@ padding-bottom: 100px;
     display: flex;
     justify-content: center;
     text-align: center;
+    width: 100%;
  }
 
 .quote-left{
@@ -569,7 +570,7 @@ max-width: 500px;
  
 .quote-right{
 padding-top: 100px;
-padding-right: 100px;
+/* padding-right: 100px; */
  } 
 
 .quote-author{
