--- a/styles.css
+++ b/styles.css
@@ -576,7 +576,7 @@ padding-top: 100px;
 .quote-author{
     font-family: Arvo;
     font-weight: 200;
-    margin-left: 280px;
+/*     margin-left: 280px; */
     width: 600px;
     line-height: 150%;
 }
