--- a/styles.css
+++ b/styles.css
@@ -554,6 +554,7 @@ padding-bottom: 100px;
     justify-content: center;
     text-align: center;
     width: 100%;
+    flex-direction: column;
  }
 
 .quote-left{
