--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,9 @@ input{
     .quote-right{
         filter: brightness(0) saturate(100%) invert(86%) sepia(20%) saturate(3168%) hue-rotate(235deg) brightness(108%) contrast(98%);
     }
-
+   /*  .header-img{
+        display: block;
+    } */
 
 }
 
