--- a/styles.css
+++ b/styles.css
@@ -212,6 +212,9 @@ input{
     .cup{
         filter: brightness(0) saturate(100%) invert(86%) sepia(75%) saturate(587%) hue-rotate(340deg) brightness(102%) contrast(99%);
     }
+    .header-img{
+        filter: brightness(0) saturate(100%) invert(86%) sepia(75%) saturate(587%) hue-rotate(340deg) brightness(102%) contrast(99%);
+    }
 }
 
 
