--- a/styles.css
+++ b/styles.css
@@ -173,7 +173,11 @@ input{
         -ms-transition: background-color 1000ms linear;
         transition: background-color 1000ms linear;
     }
-
+    .fieldset{
+        -webkit-transition: background-color 1000ms linear;
+        -ms-transition: background-color 1000ms linear;
+        transition: background-color 1000ms linear;
+    }
     .header{
         -webkit-transition: background-color 1000ms linear;
         -ms-transition: background-color 1000ms linear;
