--- a/styles.css
+++ b/styles.css
@@ -168,11 +168,11 @@ input{
 
 :root:has(#light:checked){
 
-    .checkbox-wrapper{
+   /*  .checkbox-wrapper{
         -webkit-transition: background-color 1000ms linear;
         -ms-transition: background-color 1000ms linear;
         transition: background-color 1000ms linear;
-    }
+    } */
    /*  .fieldset{
         -webkit-transition: background-color 1000ms linear;
         -ms-transition: background-color 1000ms linear;
@@ -216,10 +216,10 @@ input{
         filter: brightness(0) saturate(100%) invert(86%) sepia(20%) saturate(3168%) hue-rotate(235deg) brightness(108%) contrast(98%);
     }
    /*  .header-img{
-        display: block;
-    } */
+        display: block; */
+    }
 
-    .checkbox-wrapper{
+/*     .checkbox-wrapper{
         -webkit-transition: background-color 1000ms linear;
         -ms-transition: background-color 1000ms linear;
         transition: background-color 1000ms linear;
@@ -240,7 +240,7 @@ input{
         -ms-transition: background-color 1000ms linear;
         transition: background-color 1000ms linear;
 
-    }
+    } */
 
 :root:has(#black:checked) {
     --clr-text: yellow;
@@ -256,6 +256,14 @@ input{
         filter: brightness(0) saturate(100%) invert(86%) sepia(75%) saturate(587%) hue-rotate(340deg) brightness(102%) contrast(99%);
     }
 
+    .quote-left{
+        filter: brightness(0) saturate(100%) invert(86%) sepia(75%) saturate(587%) hue-rotate(340deg) brightness(102%) contrast(99%)
+    }
+
+    .quote-right{
+        filter: brightness(0) saturate(100%) invert(86%) sepia(75%) saturate(587%) hue-rotate(340deg) brightness(102%) contrast(99%)
+    }
+/* 
     .checkbox-wrapper{
         -webkit-transition: background-color 1000ms linear;
         -ms-transition: background-color 1000ms linear;
@@ -269,7 +277,7 @@ input{
     }
     -webkit-transition: background-color 1000ms linear;
         -ms-transition: background-color 1000ms linear;
-        transition: background-color 1000ms linear;
+        transition: background-color 1000ms linear; */
 }
 
 
