--- a/styles.css
+++ b/styles.css
@@ -337,6 +337,7 @@ color: var(--clr-text);
     font-weight: 600;
     font-size: 12px;
     color: var(--clr-text);
+    padding-top: 90px;
     @media screen and (max-width: 768px){
         font-size: 17px;
     }
@@ -365,22 +366,27 @@ color: var(--clr-text);
 
 .about-link{
     color: var(--clr-text);
+    text-decoration: none;
 }
 
 .contact-link{
     color: var(--clr-text);
+    text-decoration: none;
 }
 
 .blog-link{
     color: var(--clr-text);
+    text-decoration: none;
 }
 
 .depl-link{
     color: var(--clr-text);
+    text-decoration: none;
 }
 
 .dev-link{
     color: var(--clr-text);
+    text-decoration: none;
 }
 
 .convers-btn{
