--- a/styles.css
+++ b/styles.css
@@ -114,15 +114,22 @@ label input{
  width: 200px;
  margin-top: 70px;
 
+ height: 40px;
+ background-color: rgba(255, 255, 0, 0);
+ color: var(--clr-text);
+ font-family: Arvo;
+ font-size: 12px;
+ font-weight: bold;
+ border: 3px solid var(--clr-text);
+ padding: 10px 20px;
+ text-decoration: none;
+ display: inline-block;
+ position: relative;
+ margin-left: 40px;
+ margin-right: 40px;
+
 }
-.fieldset{
-  /*   display: flex;
-    justify-content: center;
-    align-items: center; */
-    margin-left: 40px;
-    margin-right: 40px;
-    background-color: var(--clr-mark);
-}
+
 
 .color-picker input[type="radio"]{
     appearance: none;
