--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,6 @@ label input{
  background: var(--clr-bg);
  width: 200px;
  margin-top: 70px;
-
  height: 40px;
  background-color: rgba(255, 255, 0, 0);
  color: var(--clr-text);
@@ -127,6 +126,7 @@ label input{
  position: relative;
  margin-left: 40px;
  margin-right: 40px;
+ margin-top: 120px;
 
 }
 
