--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ label{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 4px;
+    gap: 10px;
 }
 
 .theme-clr-light{
@@ -106,25 +106,28 @@ label input{
     display: flex;
 }
 
+.color-picker{
+    padding-top: 80px;
+}
+
 .color-picker > fieldset{
  border: 0;
  display: flex;
  justify-content: center;
  gap: 5px;
- background: var(--clr-bg);
  background-color: rgba(255, 255, 0, 0);
- color: var(--clr-text);
+ /* color: var(--clr-text);
  font-family: Arvo;
  font-size: 12px;
  font-weight: bold;
  border: 3px solid var(--clr-text);
  padding: 10px 20px;
  text-decoration: none;
- display: inline-block;
- position: relative;
- margin-left: 80px;
- margin-right: 80px;
- margin-top: 120px;
+ display: inline-block; */
+ /* position: relative; */
+ margin-left: 130px;
+ margin-right: 130px;
+/*  margin-top: 120px;  */
 
 }
 
