--- a/styles.css
+++ b/styles.css
@@ -725,5 +725,22 @@ padding-top: 100px;
     padding-top: 20px;
 }
 
+.footer-main{
+    font-family: Silkscreen;
+font-size: 57.5px;
+text-decoration: none;
+color: var(--clr-text);
+}
+
+.footer-div{
+display: flex;
+justify-content: center;
+padding-top: 90px;
+}
+
+.footer-wrapper{
+    display: flex;
+}
+
 
     
