--- a/styles.css
+++ b/styles.css
@@ -713,7 +713,6 @@ padding-top: 100px;
 
 .footer{
     background-color: var(--clr-bg);
-    border-top: 2px solid black ;
     font-family: Arvo;
 }
 .footer-copyright{
@@ -730,20 +729,36 @@ padding-top: 100px;
 font-size: 57.5px;
 text-decoration: none;
 color: var(--clr-text);
+line-height: 65%;
+padding-bottom: 10px;
 }
 
 .footer-div{
 display: flex;
 justify-content: center;
 padding-top: 90px;
+padding-bottom: 100px;
 }
 
 .footer-wrapper{
     display: flex;
+    margin-left: 60px;
 }
 
 .footer-list4{
     width: 20vw;
+}
+
+.footer-img-list{
+    padding-top: 45px;
+    width: 140px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-img{
+    width: 20px;
+    height: 20px;
 }
 
 
